# large-scale-hts-reconciliation

./: .gitmodules  Dockefile  README.md  fly.toml  memory.py  requirements.txt
demo/: benchmark_construct_G.py  benchmark_construct_S.py  benchmark_reconcile.py  benchmark_reconcile_bottom_up.py  benchmark_reconcile_dp.py  benchmark_reconcile_mpi.py  benchmark_reconcile_naive_mpi.py  benchmark_reconcile_single_process.py  debug_s.py  prophet_demo.py  reconcile_mpi.py  reconcile_single_process.py  test.py
docs/: Makefile  conf.py  index.rst  lhts.rst  make.bat
docs/_build/doctrees/: environment.pickle  index.doctree  lhts.doctree
docs/_build/doctrees/_generate/: lhts.reconcile.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  lhts.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_generate/: lhts.reconcile.html
docs/_build/html/_sources/_generate/: lhts.reconcile.rst.txt
large_scale_hts_reconciliation/: CMakeLists.txt  MANIFEST.in  Makefile  setup.py
large_scale_hts_reconciliation/docs/: lhts.rst
large_scale_hts_reconciliation/docs/_build/doctrees/: environment.pickle  lhts.doctree
large_scale_hts_reconciliation/docs/_build/html/: genindex.html  index.html  objects.inv  search.html
large_scale_hts_reconciliation/include/: Distributed.h  G.h  MPI_utils.h  S.h  distribute.h  distribute_forecast.h  metrics.h  reconcile.h
large_scale_hts_reconciliation/src/: Distributed.cpp  G.cpp  MPI_utils.cpp  S.cpp  distribute.cpp  distribute_forecast.cpp  float.cpp  main.cpp  metrics.cpp  naive.cpp  reconcile.cpp
large_scale_hts_reconciliation/tests/: test_mpi_fast.py  test_single_process.py  test_single_process_fast.py  test_single_process_slow.py
lhts/: example.cpp  pyproject.toml  setup.py
nixtla_eval/: evaluate_m5.ipynb
nixtla_evaluation/: evaluate.ipynb  evaluate_m5.ipynb
notebooks/: .gitignore  prepare_Labour_forecast.ipynb  prepare_TourismSmall_forecast.ipynb  prepare_m5_forecast.ipynb  prepare_m5_forecast.py  prepare_wikipeida_forecast.ipynb  prepare_wikipeida_forecast.py
public/: Dockerfile  fly.toml  index.bundle.js  index.html
src/: Makefile  example.cpp  frontmatter.json  index.ejs  index_html.ejs
website/: package-lock.json
website/public/: index.html
website/src/: frontmatter.json  index.ejs
